[package]
name = "libtorrent"
version = "0.1.0"
authors = ["Nicolas Chevalier <nicolas.chevalier@enicom.org>"]
description = "Rust API for libtorrent"
license = "MIT"
keywords = ["torrent", "magnet"]
edition = "2018"
repository = "https://github.com/shawone/libtorrent-rs"

[dependencies.libtorrent-sys]
version = "0.1.0"
